# tufsegm_api

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md  deployment_run.sh  deployment_setup.sh  pyproject.toml  requirements-dev.txt  requirements-mlflow.txt  requirements-test.txt  requirements.txt  setting_up_deployment.sh  tox.ini
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-tufsegm_api_start.ipynb
tests/: conftest.py  test_deepaas.py
tests/configurations/: deepaas_1.conf  deepaas_2.conf
tests/data/: test.txt  train.txt
tests/data/annotations/: KA_02_json.json  MU_15_json.json  MU_45_json.json
tests/data/images/KA_02/: DJI_0_0001_R.npy  DJI_0_0437_R.npy
tests/data/images/MU_15/: DJI_0_0001_R.npy  DJI_0_0015_R.npy  DJI_0_0029_R.npy  DJI_0_0037_R.npy
tests/data/images/MU_45/: DJI_0_0089_R.npy  DJI_0_0557_R.npy  DJI_1_0230_R.npy  DJI_1_0632_R.npy
tests/data/masks/KA_02/: DJI_0_0001_R.npy  DJI_0_0437_R.npy
tests/data/masks/MU_45/: DJI_0_0089_R.npy  DJI_0_0557_R.npy  DJI_1_0230_R.npy  DJI_1_0632_R.npy
tests/models/2024-04-24_17-57-17/: eval.json  model_config.json  run_config.json  training_history.csv
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
tests/test_training/: conftest.py  test_requirements.py
tufsegm_api/: README.md  __init__.py  config.py  utils.py
