[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tufsegm_api"
authors = [
    { name = "Elena Vollmer", email = "elena.vollmer@kit.edu" },
]
description = "Deepaas API for thermal urban feature semantic segmentation model repo"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/emvollmer/tufsegm_api"
"Bug Tracker" = "https://github.com/emvollmer/tufsegm_api/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["tufsegm_api", "tufsegm_api.api"]

[tool.setuptools.package-dir]
"tufsegm_api.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
tufsegm_api = "tufsegm_api.api"
